styles/globals.scss
@import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@300;400;500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');

@tailwind base;
@tailwind utilities;
@tailwind components;

* {
    font-family: 'Zen Kaku Gothic New', sans-serif;
    letter-spacing: 1px;
    @apply scroll-smooth text-base md:text-[18px];
    @apply transition-[background-color] duration-500 #{!important};
}

input,
textarea,
button,
select,
a {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}


body {
  @apply bg-neutral-100 dark:bg-neutral-800 text-neutral-600 dark:text-neutral-100;
}

.toc {
  & :is(ul, li) {
      @apply list-none my-0;

      & li {
          @apply pl-4;
      }

      & a {
          @apply text-sm no-underline font-normal text-neutral-600 py-3 flex;

          & * {
              @apply font-normal text-sm
          }
      }
  }
}

.active-section, .active-section * {
  font-weight: 500 !important;
  @apply text-neutral-800 dark:text-amber-500 relative #{!important};
}

.active-section::before {
  @apply content-[''] h-full absolute top-0 left-0 float-left border-r-2 border-amber-500
}

